force-app/main/default/objects/Funding_Adjustment__c/Funding_Adjustment__c.object-meta.xml
<CustomObject>
    <description>Object to record adjustment of award funds that need to be either repaid or subject to clawback</description>
    <label>Funding Adjustment</label>
    <nameField>
        <displayFormat>ADJ-{000000}</displayFormat>
        <label>Funding Adjustment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>