force-app/main/default/objects/Funding_Adjustment__c/fields/Adjustment_Direction__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Direction__c</fullName>
    <description>Direction of funds to be adjusted ie clawback from GR or refund to GR</description>
    <label>Adjustment Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GR to DESNZ</fullName>
            </value>
            <value>
                <fullName>DESNZ to GR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>