force-app/main/default/objects/Funding_Adjustment__c/fields/Adjustment_Repayment_Total__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Repayment_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Amount repaid against Adjustment figure</description>
    <label>Adjustment Repayment Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>