force-app/main/default/objects/Funding_Adjustment__c/fields/Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Type__c</fullName>
    <description>Determines the method used to deliver the adjustment</description>
    <label>Adjustment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Repayment</fullName>
            </value>
            <value>
                <fullName>Funding Adjustment</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>