force-app/main/default/objects/Funding_Adjustment__c/fields/Date_1st_Chase__c.field-meta.xml
<CustomField>
    <fullName>Date_1st_Chase__c</fullName>
    <description>Date that GR is chased for payment for the first time</description>
    <label>Date 1st Chase</label>
    <type>Date</type>
</CustomField>