force-app/main/default/objects/Funding_Adjustment__c/fields/Date_2nd_Chase__c.field-meta.xml
<CustomField>
    <fullName>Date_2nd_Chase__c</fullName>
    <description>Date that GR is chased for payment for the second time</description>
    <label>Date 2nd Chase</label>
    <type>Date</type>
</CustomField>