force-app/main/default/objects/Funding_Adjustment__c/fields/Date_Adjustment_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Adjustment_Letter_Sent__c</fullName>
    <description>Date letter sent to JR informing them of final adjustment amount</description>
    <label>Date Adjustment Letter Sent</label>
    <type>Date</type>
</CustomField>