force-app/main/default/objects/Funding_Adjustment__c/fields/Date_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved__c</fullName>
    <description>Date that adjustment amount was approved</description>
    <label>Date Approved</label>
    <type>Date</type>
</CustomField>