force-app/main/default/objects/Funding_Adjustment__c/fields/Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Closed__c</fullName>
    <description>Date that the adjustment was fulfilled</description>
    <label>Date Closed</label>
    <type>Date</type>
</CustomField>