force-app/main/default/objects/Funding_Adjustment__c/fields/Date_Due__c.field-meta.xml
<CustomField>
    <fullName>Date_Due__c</fullName>
    <description>Date that adjustment will be due to be completed by</description>
    <label>Date Due</label>
    <type>Date</type>
</CustomField>