force-app/main/default/objects/Funding_Adjustment__c/fields/Date_Escalation_for_Non_Payment__c.field-meta.xml
<CustomField>
    <fullName>Date_Escalation_for_Non_Payment__c</fullName>
    <description>Date that Adjustment is escalated due to non--compliance by GR</description>
    <label>Date Escalation for Non-Payment</label>
    <type>Date</type>
</CustomField>