force-app/main/default/objects/Funding_Adjustment__c/fields/Date_GR_Acknowledged_Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Date_GR_Acknowledged_Adjustment_Amount__c</fullName>
    <description>Date that GR confirms they are aware of Adjustment/Clawback amount</description>
    <label>Date GR Acknowledged Adjustment Amount</label>
    <type>Date</type>
</CustomField>