force-app/main/default/objects/Funding_Adjustment__c/fields/Date_Paid__c.field-meta.xml
<CustomField>
    <fullName>Date_Paid__c</fullName>
    <description>Date outstanding balance is paid</description>
    <label>Date Paid</label>
    <type>Date</type>
</CustomField>