force-app/main/default/objects/Funding_Adjustment__c/fields/Date_Raised__c.field-meta.xml
<CustomField>
    <fullName>Date_Raised__c</fullName>
    <description>Date that the adjustment was created</description>
    <label>Date Raised</label>
    <type>Date</type>
</CustomField>