force-app/main/default/objects/Funding_Adjustment__c/fields/Final_Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Adjustment_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Final approved Adjustment figure</description>
    <label>Final Adjustment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>