force-app/main/default/objects/Funding_Adjustment__c/fields/Final_Adjustment_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Final_Adjustment_Commentary__c</fullName>
    <description>Any final notes regarding the adjustment figure</description>
    <label>Final Adjustment Commentary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>