force-app/main/default/objects/Funding_Adjustment__c/fields/Funding_Award__c.field-meta.xml
<CustomField>
    <fullName>Funding_Award__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Award</label>
    <referenceTo>FundingAward</referenceTo>
    <relationshipLabel>Funding Adjustments</relationshipLabel>
    <relationshipName>Funding_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>