force-app/main/default/objects/Funding_Adjustment__c/fields/Grant_Recipient_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Grant_Recipient_Commentary__c</fullName>
    <description>Comments from GR on proposed Adjustment figure and responding GR figure</description>
    <label>Grant Recipient Commentary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>