force-app/main/default/objects/Funding_Adjustment__c/fields/Grant_Recipient_Proposed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Grant_Recipient_Proposed_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Amount suggested by Grant recipient that they determine to be appropriate</description>
    <label>Grant Recipient Proposed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>