force-app/main/default/objects/Funding_Adjustment__c/fields/Outstanding_Adjustment_Balance__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Adjustment_Balance__c</fullName>
    <description>Balance of adjustment remaining</description>
    <formula>Final_Adjustment_Amount__c -  Adjustment_Repayment_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Adjustment Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>