force-app/main/default/objects/Funding_Adjustment__c/fields/Parent_Reconciliation__c.field-meta.xml
<CustomField>
    <fullName>Parent_Reconciliation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Reconciliation</label>
    <referenceTo>Funding_Reconciliation__c</referenceTo>
    <relationshipLabel>Funding Adjustments</relationshipLabel>
    <relationshipName>Funding_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>