force-app/main/default/objects/Funding_Adjustment__c/fields/Proposed_Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Adjustment_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Amount of adjustment proposed by Delivery Partner</description>
    <label>Proposed Adjustment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>