force-app/main/default/objects/Funding_Adjustment__c/fields/Proposed_Adjustment_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Adjustment_Commentary__c</fullName>
    <description>Rationale by Delivery Partner for Adjustment Figure proposed</description>
    <label>Proposed Adjustment Commentary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>