force-app/main/default/objects/Funding_Adjustment__c/fields/Reconciliation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reconciliation_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Amount of discrepancy identified by reconciliation process</description>
    <label>Reconciliation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>