force-app/main/default/objects/Funding_Adjustment__c/fields/Reconciliation_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Reconciliation_Commentary__c</fullName>
    <description>Notes explaining the cause of the discrepancy</description>
    <label>Reconciliation Commentary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>