force-app/main/default/objects/Funding_Adjustment__c/recordTypes/WH_LG.recordType-meta.xml
<RecordType>
    <fullName>WH_LG</fullName>
    <active>true</active>
    <label>WH-LG</label>
</RecordType>