force-app/main/default/objects/Funding_Adjustment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Funding_Adjustment__c.WH_LG</value>
    </filters>
    <label>All</label>
</ListView>